<resources>
    <string name="app_name">Nomad5s</string>
    <string name="SeleccionArea">Select Audit Area</string>
    <string name="nuevaArea">New Area</string>
    <string name="nuevaAreaHint">Enter new area name</string>
    <string name="guardarNuevaArea">Save new area</string>
    <string name="seEliminoFoto">Image loaded</string>
    <string name="noSeEliminoFoto">image loaded. a backup image was saved to gallery</string>

    <string name="verCriterios">Criteria</string>
    <string name="criteriaTitulo">Criteria</string>
    <string name="sacarFoto">Add photo</string>
    <string name="guardarAuditoria">Save Audit</string>
    <string name="salir">quit</string>
    <string name="manageAreas">Manage audit areas</string>
    <string name="myAudits">My Audits</string>
    <string name="addNewArea">Add new Area</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="signed_out">Signed out</string>
    <string name="generarPDF">Send PDF report</string>
    <string name="quit">Quit</string>
    <string name="signOut">Sign out your account and quit</string>
    <string name="settings">Settings</string>
    <string name="manageAuditores">Manage audit team</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manageCampanias">Manage campaigns</string>
    <string name="fechaInicioCampania">Starting Date</string>
    <string name="tagFechaInicio">Kick Off</string>
    <string name="tagFechaFin">Finish Date</string>
    <string name="tagFechaStart">StartDate</string>
    <string name="tagCantidadAuditoriasProgramadas">Total audits</string>
    <string name="tagCantidadAuditoriasTerminadas">Finished</string>
    <string name="tituloListadoAuditoriasDeCampania">Audit List</string>
    <string name="addAuditoria">Add Audit</string>
    <string name="saveCampaign">saveCampaign</string>
    <string name="tituloDarNombreAuditor">Set Auditor data</string>
    <string name="tituloDarNombreArea">Set Area data</string>
    <string name="hintNombreAuditor">Auditor name</string>
    <string name="hintPuestoAuditor">Auditor position</string>
    <string name="hintMailAuditor">Auditor e-mail*</string>
    <string name="campoRequerido">* Required fields</string>
    <string name="save">Save</string>
    <string name="mailAuditorIncompleto">valid e-mail is required to continue</string>
    <string name="hintNombreArea">Area name</string>
    <string name="hintResponsableArea">Area owner e-mail</string>
    <string name="mailInvalido">Please enter a valid e-mail adress</string>
    <string name="nombreAreaIncompleto">Please enter a name for the new area</string>
    <string name="audits">Audits</string>
    <string name="hintnombreResponsableArea">Area owner</string>
    <string name="item">Item</string>
    <string name="score">Score</string>
</resources>
