<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   android:focusableInTouchMode="true"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/verde3"
        android:hint="@string/hintMailAuditor"
        android:id="@+id/TIL_mailAuditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/ET_mailAuditor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:hint="@string/hintNombreAuditor"
        android:id="@+id/TIL_nombreAuditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ET_nombreAuditor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:hint="@string/hintPuestoAuditor"
        android:id="@+id/TIL_nombrePuesto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ET_nombrePuesto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_marginEnd="@dimen/margenChico"
        android:layout_gravity="end"
        android:textStyle="italic"
        android:textColor="@color/verde3"
        android:text="@string/campoRequerido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>