<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/verde3"
        android:hint="@string/hintNombreArea"
        android:id="@+id/TIL_nombreArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:focusableInTouchMode="true"
            android:id="@+id/ET_nombreArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:hint="@string/hintnombreResponsableArea"
            android:id="@+id/TIL_nombreResponsableArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ET_nombreResponsableArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:hint="@string/hintResponsableArea"
        android:id="@+id/TIL_mailResponsableArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ET_mailResponsableArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_marginEnd="@dimen/margenChico"
        android:layout_gravity="end"
        android:textStyle="italic"
        android:textColor="@color/verde3"
        android:text="@string/campoRequerido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>